--- a/package.json
+++ b/package.json
@@ -21,8 +21,26 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
+    "@faker-js/faker": "^8.4.1",
+    "@types/faker": "^6.6.9",
+    "admin-lte": "3.1",
+    "chart.js": "^4.4.2",
+    "daterangepicker": "^3.1.0",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
+    "font-awesome": "^4.7.0",
+    "icheck-bootstrap": "^3.0.1",
+    "ionicons": "^7.3.1",
+    "jquery-knob": "^1.2.11",
+    "jquery-sparkline": "^2.4.0",
+    "jquery-ui": "^1.13.2",
+    "jqvmap": "^1.5.1",
+    "jvectormap": "^2.0.4",
+    "moment": "^2.30.1",
+    "overlayscrollbars": "^2.6.1",
     "rxjs": "~7.8.0",
+    "summernote": "^0.8.20",
+    "tempusdominus-bootstrap-4": "^5.39.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
