--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.3",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.3",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/platform-server": "^17.3.0",
@@ -24,7 +26,7 @@
     "@faker-js/faker": "^8.4.1",
     "@types/faker": "^6.6.9",
     "admin-lte": "3.1",
-    "chart.js": "^4.4.2",
+    "chart.js": "^3.9.1",
     "daterangepicker": "^3.1.0",
     "express": "^4.18.2",
     "faker": "^6.6.6",
@@ -37,6 +39,7 @@
     "jqvmap": "^1.5.1",
     "jvectormap": "^2.0.4",
     "moment": "^2.30.1",
+    "ng2-charts": "^3.1.2",
     "overlayscrollbars": "^2.6.1",
     "rxjs": "~7.8.0",
     "summernote": "^0.8.20",
